[project]
name = "ccfm"
version = "0.1.0"
description = "Conditional Flow Matching for fluorescence microscopy super-resolution"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision",
    "torchdiffeq",
    "torchdyn",
    "torchmetrics[image]",
    "tifffile",
    "numpy",
    "matplotlib",
    "tqdm",
    "wandb",
    "pyiqa",
    "microssim",
    "POT",
    "scipy",
    "torchcfm",
    "pooch",
    "typer",
]
